[package]
name = "rpn-reckoner"
version = "0.1.0"
edition = "2021"
authors = ["Rei-Ashine"]
description = "A Reverse Polish Notation library"
license = "MIT"
include = ["src/", "README.md"]
homepage = "https://github.com/Rei-Ashine/rpn-reckoner/README.md"
repository = "https://github.com/Rei-Ashine/rpn-reckoner"

[package.metadata.docs.rs]
rustdoc-args = ["--cfg", "doc_cfg"]

[[bin]]
name = "rpn-reckoner"
doc = false
path = "src/main.rs"